Worked on Replacement and return user requests and orders panel

--- a/src/app/components/sales/orders-panel/orders-panel.component.html
+++ b/src/app/components/sales/orders-panel/orders-panel.component.html
@@ -15,7 +15,8 @@
                             [footerHeight]="50" [rowHeight]="'auto'" [limit]="15">
                             <ngx-datatable-column prop="primary_id"></ngx-datatable-column>
                             <!-- <ngx-datatable-column prop="payuid"></ngx-datatable-column> -->
-                            <ngx-datatable-column name="customer_id"></ngx-datatable-column>
+                            <ngx-datatable-column prop="customer_id"></ngx-datatable-column>
+                            <ngx-datatable-column prop="firstName"></ngx-datatable-column>
                             <ngx-datatable-column prop="orderStatus"></ngx-datatable-column>
                             <ngx-datatable-column name="createdAt"></ngx-datatable-column>
                             <ngx-datatable-column name="grandTotal"></ngx-datatable-column>
